# colour-hdri

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  BIBLIOGRAPHY.bib  BIBLIOGRAPHY.rst  CONTRIBUTORS.rst  LICENSE  MANIFEST.in  README.rst  THIRD_PARTY  TODO.rst  pyproject.toml  requirements.txt  setup.py  tasks.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation-improvement.yml  feature-request.yml  question.yml
.github/workflows/: continuous-integration-documentation.yml  continuous-integration-package.yml  continuous-integration-quality-unit-tests.yml  continuous-integration-static-type-checking.yml  continuous-integration.yml
colour_hdri/: __init__.py  camera_response_functions.py  common.py  constants.py  crf.py  exif.py  exposure.py  image.py  merge.py  plotting.py  process.py  radiance.py  ramblings_001.ipynb  ramblings_002.ipynb  ramblings_003.ipynb  ramblings_004.ipynb  recovery.py  rgb.py  utilities.py  weighting_functions.py
colour_hdri/calibration/: __init__.py  absolute_luminance.py  camera_response_functions.py  debevec1997.py
colour_hdri/calibration/tests/: test_absolute_luminance.py  test_debevec1997.py  tests_absolute_luminance.py  tests_debevec1997.py
colour_hdri/cfa/bayer/: demosaicing_bilinear.py  masks.py  mosaicing.py
colour_hdri/distortion/: __init__.py  vignette.py
colour_hdri/distortion/tests/: test_vignette.py
colour_hdri/examples/: example_global_tonemapping_operators.ipynb  example_merge_from_ldr_files.ipynb  example_merge_from_raw_files.ipynb  example_merge_from_raw_files_using_rawpy.ipynb  example_merge_from_raw_files_with_post_demosaicing.ipynb  examples_absolute_luminance_calibration.ipynb  examples_absolute_luminance_calibration_and_photometric_exposure_conversion.ipynb  examples_adobe_dng_sdk_colour_processing.ipynb  examples_advanced_processing_with_an_input_device_transform.ipynb  examples_camera_response_functions.ipynb  examples_global_tonemapping_operators.ipynb  examples_merge_from_jpg_files.ipynb  examples_merge_from_ldr_files.ipynb  examples_merge_from_raw_files.ipynb  examples_merge_from_raw_files_using_rawpy.ipynb  examples_merge_from_raw_files_with_post_demosaicing.ipynb  examples_variance_minimization_light_probe_sampling.ipynb  examples_vignette_characterisation_and_correction.ipynb  ramblings_001.ipynb  ramblings_002.ipynb  ramblings_003.ipynb
colour_hdri/exposure/: __init__.py  common.py  dsc.py
colour_hdri/exposure/tests/: test_common.py  test_dsc.py
colour_hdri/generation/: __init__.py  hdri.py  radiance.py  weighting_functions.py
colour_hdri/generation/tests/: test_hdri.py  test_radiance.py  test_weighting_functions.py  tests_radiance.py  (+1 more)
colour_hdri/models/: __init__.py  dng.py  rgb.py
colour_hdri/network/: __init__.py  graphs.py  nodes.py
colour_hdri/plotting/: __init__.py  common.py  conftest.py  hdri.py  radiance.py  tonemapping.py
colour_hdri/process/: __init__.py  conversion.py  dng.py
colour_hdri/recovery/: __init__.py  highlights.py
colour_hdri/sampling/: __init__.py  grossberg2003.py  grossberg2009.py  variance_minimization.py
colour_hdri/tonemapping/: __init__.py
colour_hdri/utilities/: __init__.py  common.py  exif.py  exposure.py  image.py  requirements.py
docs/: api.rst  bibliography.rst  colour_hdri.calibration.absolute_luminance.rst  colour_hdri.calibration.debevec1997.rst  colour_hdri.calibration.rst  colour_hdri.distortion.rst  colour_hdri.exposure.rst  colour_hdri.generation.radiance.rst  colour_hdri.generation.rst  colour_hdri.generation.weighting_functions.rst  colour_hdri.models.dataset.dng.rst  colour_hdri.models.dataset.rst  colour_hdri.models.dng.rst  colour_hdri.models.rgb.rst  colour_hdri.models.rst  colour_hdri.network.rst  colour_hdri.plotting.radiance.rst  colour_hdri.plotting.rst  colour_hdri.plotting.tonemapping.rst  colour_hdri.process.conversion.rst  colour_hdri.process.dng.rst  colour_hdri.process.rst  colour_hdri.recovery.highlights.rst  colour_hdri.recovery.rst  colour_hdri.rst  colour_hdri.sampling.grossberg2003.rst  colour_hdri.sampling.rst  colour_hdri.sampling.variance_minimization.rst  colour_hdri.tonemapping.global_operators.operators.rst  colour_hdri.tonemapping.global_operators.rst  colour_hdri.tonemapping.rst  colour_hdri.utilities.common.rst  colour_hdri.utilities.exif.rst  colour_hdri.utilities.exposure.rst  colour_hdri.utilities.image.rst  colour_hdri.utilities.rst  conf.py  index.rst  installation.rst  manual.rst  (+4 more)
docs/_templates/: navbar.html
utilities/: build_sphinx_documentation.sh  export_todo.py  unicode_to_ascii.py
(+32 files in other folders)
