[tool.poetry]
name = "colour-hdri"
version = "0.1.6"
description = "HDRI / Radiance image processing algorithms for Python"
license = "BSD-3-Clause"
authors = [ "Colour Developers" ]
readme = 'README.rst'
repository = "https://github.com/colour-science/colour-hdri"
homepage = "https://www.colour-science.org/"
keywords = [
    "color",
    "color-science",
    "color-space",
    "color-spaces",
    "colorspace",
    "colorspaces",
    "colour",
    "colour-science",
    "colour-space",
    "colour-spaces",
    "colourspace",
    "colourspaces",
    "hdr",
    "hdr-image",
    "hdri",
    "hdri-image",
    "python",
    "raw",
    "tone-mapping",
    "tonemapping"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]
exclude = [
    "colour_hdri/resources/colour-hdri-examples-datasets/*",
    "colour_hdri/resources/colour-hdri-examples-datasets/frobisher_001/*",
    "colour_hdri/resources/colour-hdri-examples-datasets/radiance/*",
    "colour_hdri/resources/colour-hdri-examples-datasets/unity_001/*",
    "colour_hdri/resources/colour-hdri-tests-datasets/colour_hdri/calibration/*",
    "colour_hdri/resources/colour-hdri-tests-datasets/colour_hdri/generation/*",
    "colour_hdri/resources/colour-hdri-tests-datasets/colour_hdri/process/*",
    "colour_hdri/resources/colour-hdri-tests-datasets/colour_hdri/recovery/*",
    "colour_hdri/resources/colour-hdri-tests-datasets/colour_hdri/sampling/*",
    "colour_hdri/resources/colour-hdri-tests-datasets/frobisher_001/*",
    "colour_hdri/resources/colour-hdri-tests-datasets/frobisher_001/*",
    "colour_hdri/resources/colour-hdri-tests-datasets/unity_001/*",
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
colour-science = "^0.3.14"
recordclass = "*"

"backports.functools_lru_cache" = { version = "*", optional = true }
biblib-simple = { version = "*", optional = true }  # Development dependency.
colour-demosaicing = { version = "*", optional = true }
coverage = { version = "*", optional = true }  # Development dependency.
coveralls = { version = "*", optional = true }  # Development dependency.
flake8 = { version = "*", optional = true }  # Development dependency.
invoke = { version = "*", optional = true }  # Development dependency.
jupyter = { version = "*", optional = true }  # Development dependency.
matplotlib = { version = "*", optional = true }
mock = { version = "*", optional = true }  # Development dependency.
nose = { version = "*", optional = true }  # Development dependency.
numpy = { version = "*", optional = true }
pre-commit = { version = "*", optional = true }  # Development dependency.
pytest = { version = "*", optional = true }  # Development dependency.
rawpy = { version = "*", optional = true }
restructuredtext-lint = { version = "*", optional = true }  # Development dependency.
sphinx = { version = "*", optional = true }  # Development dependency.
sphinx_rtd_theme = { version = "*", optional = true }  # Development dependency.
sphinxcontrib-bibtex = { version = "*", optional = true }  # Development dependency.
toml = { version = "*", optional = true }  # Development dependency.
twine = { version = "*", optional = true }  # Development dependency.
yapf = { version = "0.23", optional = true }  # Development dependency.

[tool.poetry.dev-dependencies]
biblib-simple = "*"
coverage = "*"
coveralls = "*"
flake8 = "*"
invoke = "*"
jupyter = "*"
mock = "*"
nose = "*"
pre-commit = "*"
pytest = "*"
restructuredtext-lint = "*"
sphinx = "*"
sphinx_rtd_theme = "*"
sphinxcontrib-bibtex = "*"
toml = "*"
twine = "*"
yapf = "0.23"

[tool.poetry.extras]
development = [
    "biblib-simple",
    "coverage",
    "coveralls",
    "flake8",
    "invoke",
    "jupyter",
    "mock",
    "nose",
    "pre-commit",
    "pytest",
    "restructuredtext-lint",
    "sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-bibtex",
    "toml",
    "twine",
    "yapf"
]
optional = [ "colour-demosaicing", "rawpy" ]
plotting = [ "backports.functools_lru_cache", "matplotlib" ]
read-the-docs = [ "mock", "numpy", "sphinxcontrib-bibtex" ]

[build-system]
requires = [ "poetry>=0.12" ]
build-backend = "poetry.masonry.api"
